# sync-agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Packager.toml  README.md  build.rs  dist-workspace.toml  release-please-config.json  rust-toolchain.toml
.cargo/: config.toml
.cargo-packager/dmg/: Cook Sync.icns
.claude/: settings.local.json
.github/scripts/: build-linux-packages.sh  build-macos-dmg.sh  build-windows-msi.sh  generate-manifest.py
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release-packager.yml  release-please.yml  release.yml  sync-agent-ci.yml  sync-agent-release-packages.yml  sync-agent-release-please.yml
assets/: README.md  cook-sync.desktop  entitlements.plist  package.icns
docs/plans/: 2026-03-10-seamless-self-update-design.md
resources/: cook-sync-settings.desktop  cook-sync.desktop
resources/macos/: entitlements.plist
resources/windows/: app.manifest  app.rc
scripts/: build-appimage-updatable.sh  build-installer.sh  build-macos-sparkle-dmg.sh  create-icons.sh  dev.sh  generate-appcast.sh  generate-keys-openssl.sh  generate-manifest.sh  generate-sparkle-keys-openssl.sh  generate-sparkle-keys.sh  post-install.sh  sign-update-package.sh  test-local.sh  test-oauth.sh
src/: appimage_integration.rs  daemon.rs  error.rs  lib.rs  logging.rs  main.rs  notifications.rs  sentry_integration.rs  windows_integration.rs
src/api/: endpoints.rs  mod.rs
src/auth/: jwt.rs  jwt_test.rs  mod.rs  secure_session.rs  secure_session_test.rs
src/auth/secure_session/: keyring_store.rs
src/config/: constants.rs  mod.rs  paths.rs  settings.rs  settings_test.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/sync/: manager.rs  manager_test.rs  mod.rs  status.rs  status_listener.rs  status_test.rs
src/tray/: about.rs  linux.rs  menu.rs  mod.rs  tray_icon_impl.rs
src/updater/: mod.rs
src/updates/: appimage_backend.rs  axo_backend.rs  mod.rs  sparkle_backend.rs  update_manager.rs
src/welcome/: app.rs  mod.rs  mod_test.rs  state.rs  style.rs
src/welcome/components/: action_buttons.rs  brand_header.rs  mod.rs  setup_steps.rs
tests/: welcome_integration_test.rs
wix/: main.wxs
