[package]
name = "cook-sync"
version = "0.6.38"
edition = "2021"
authors = ["Alexey Dubovskoy"]
description = "CookCloud sync agent for syncing recipes with Cook.md"
repository = "https://github.com/cook-md/sync-agent"
homepage = "https://cook.md"
license = "MIT"

[lints.rust]
unexpected_cfgs = "allow"

[package.metadata.wix]
upgrade-guid = "F94AFCD5-DDF8-4A2C-BFE3-CD390FBC45B8"
path-guid = "9A825CC4-2647-4DFD-BCB7-CA6BD0AFEC57"
license = false
eula = false

[features]
# Default features
default = []

# Environment-specific features
staging = []
local-prod = []  # For testing production endpoints locally

[dependencies]
# Core functionality
cooklang-sync-client = { version = "0.3.0" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
auto-launch = "0.5"

# System tray (platform-specific in platform dependencies below)
image = "0.25"

# Database
rusqlite = { version = "0.37", features = ["bundled"] }

# Networking
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
url = "2"
urlencoding = "2"
futures-util = "0.3"

# CLI and daemon
clap = { version = "4", features = ["derive"] }

# Update dependencies
cargo-packager-updater = "0.2"
once_cell = "1.21"
sys-info = "0.9"
sentry = { version = "0.43", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# File system
dirs = "6"

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
semver = { version = "1", features = ["serde"] }
open = "5"
rfd = "0.15"
dark-light = "2.0"
notify-rust = "4"

[dev-dependencies]
tempfile = "3"

# Unix-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-foundation = "0.10"
keyring = { version = "3", features = ["apple-native"] }
# macOS uses tray-icon
tray-icon = "0.21"
winit = "0.30"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native-sync-persistent"] }
# Linux uses ksni for system tray (no GTK event loop required)
ksni = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi", "winbase"] }
windows-service = "0.8"
winreg = "0.55"
keyring = { version = "3", features = ["windows-native"] }
# Windows uses tray-icon
tray-icon = "0.21"
winit = "0.30"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
